--- a/views/newqcm.ejs
+++ b/views/newqcm.ejs
@@ -1,28 +1,22 @@
-<!-- newqcm.ejs -->
+<!-- rajouter les headers
+ -->
 
+<!--  mettre a jour le sujet et le nb de points
+ -->
 <form action="/qcms/new" method="POST">
     <div>
-        <label for="name">Name</label>
+        <label for="name">Nom</label>
         <input type="text" id="name" name="name">
     </div>
     <div>
-        <label for="subject">Subject</label>
+        <label for="subject">Sujet</label>
         <input type="text" id="subject" name="subject">
     </div>
     <div>
         <label for="nbpoints">Nb points</label>
         <input type="number" id="nbpoints" name="nbpoints">
     </div>
-    <div>
-        <label for="question">Question</label>
-        <input type="text" id="question" name="question">
-    </div>
-    <div>
-        <label for="options">Options</label>
-        <!-- Include as many option fields as needed -->
-        <input type="text" id="option1" name="options" placeholder="Option 1">
-        <input type="text" id="option2" name="options" placeholder="Option 2">
-        <!-- Add more options if needed -->
-    </div>
     <input type="submit" value="Create">
 </form>
+
+<!-- ajouter les champs name, subject et nbpoints -->
