--- a/views/newqcm.ejs
+++ b/views/newqcm.ejs
@@ -1,22 +1,120 @@
-<!-- rajouter les headers
- -->
-
-<!--  mettre a jour le sujet et le nb de points
- -->
 <form action="/qcms/new" method="POST">
     <div>
         <label for="name">Nom</label>
-        <input type="text" id="name" name="name">
+        <input type="text" id="name" name="name" />
     </div>
     <div>
         <label for="subject">Sujet</label>
-        <input type="text" id="subject" name="subject">
+        <input type="text" id="subject" name="subject" />
     </div>
     <div>
         <label for="nbpoints">Nb points</label>
-        <input type="number" id="nbpoints" name="nbpoints">
+        <input type="number" id="nbpoints" name="nbpoints" />
     </div>
-    <input type="submit" value="Create">
+
+    <div id="questions-container">
+    </div>
+    <button type="button" id="add-question">Add Question</button>
+
+    <input type="submit" value="Create" />
 </form>
 
-<!-- ajouter les champs name, subject et nbpoints -->
+<script>
+    function addQuestionContainer() {
+        const container = document.getElementById("questions-container");
+        const questionDiv = document.createElement("div");
+        questionDiv.className = "question";
+
+        questionDiv.innerHTML = `
+            <div>
+                <label>Question</label>
+                <input type="text" name="questions[]">
+                <button type="button" class="add-answer">Add Answer</button>
+                <button type="button" class="remove-question">Remove Question</button>
+            </div>
+            <input type="hidden" name="answers[]" class="answer-input">
+            <div class="answers-container">
+                <div class="answer">
+                    <input type="text" class="individual-answer" value="">
+                    <label>
+                        <input type="checkbox" class="correct-answer"> Correct Answer
+                    </label>
+                    <button type="button" class="remove-answer">Remove Answer</button>
+                </div>
+                <div class="answer">
+                    <input type="text" class="individual-answer" value="">
+                    <label>
+                        <input type="checkbox" class="correct-answer"> Correct Answer
+                    </label>
+                    <button type="button" class="remove-answer">Remove Answer</button>
+                </div>
+            </div>
+        `;
+
+        container.appendChild(questionDiv);
+
+        questionDiv.querySelector(".add-answer").addEventListener("click", function () {
+            const answersContainer = questionDiv.querySelector(".answers-container");
+            const answerInput = questionDiv.querySelector(".answer-input");
+            const answerDiv = document.createElement("div");
+            answerDiv.className = "answer";
+
+            answerDiv.innerHTML = `
+                <input type="text" class="individual-answer">
+                <label>
+                    <input type="checkbox" class="correct-answer"> Correct Answer
+                </label>
+                <button type="button" class="remove-answer">Remove Answer</button>
+            `;
+            answersContainer.appendChild(answerDiv);
+
+            updateAnswers(answerInput, answersContainer);
+        });
+
+        questionDiv.querySelector(".remove-question").addEventListener("click", function () {
+            container.removeChild(questionDiv);
+        });
+    }
+
+    document.getElementById("add-question").addEventListener("click", addQuestionContainer);
+
+    document.querySelector("form").addEventListener("submit", function () {
+        const answerInputs = document.querySelectorAll('input[name="answers[]"]');
+        const answersContainers = document.querySelectorAll(".answers-container");
+
+        answerInputs.forEach((answerInput, index) => {
+            updateAnswers(answerInput, answersContainers[index]);
+        });
+    });
+
+    document.addEventListener("click", function (event) {
+        if (event.target.classList.contains("remove-answer")) {
+            const answerDiv = event.target.parentNode;
+            const answersContainer = answerDiv.parentNode;
+            answersContainer.removeChild(answerDiv);
+
+            const answerInput = answersContainer.parentNode.querySelector(".answer-input");
+            updateAnswers(answerInput, answersContainer);
+        }
+    });
+
+    addQuestionContainer();
+    addQuestionContainer();
+    addQuestionContainer();
+
+    function updateAnswers(answerInput, answersContainer) {
+        let answers = [];
+        let correctAnswers = [];
+
+        const answerElements = answersContainer.querySelectorAll(".individual-answer");
+        const correctElements = answersContainer.querySelectorAll(".correct-answer");
+
+        answerElements.forEach((input, index) => {
+            answers.push(input.value);
+            const isChecked = correctElements[index] && correctElements[index].checked;
+            correctAnswers.push(isChecked ? "true" : "false");
+        });
+
+        answerInput.value = answers.join(";") + "|" + correctAnswers.join(";");
+    }
+</script>
