--- a/views/qcms.ejs
+++ b/views/qcms.ejs
@@ -2,11 +2,17 @@
 
 <p>Mes QCMS disponibles</p>
 <ul>
-    <% for (let qcm of qcms) { %> <!--commencer le parcours de la liste qcms -->
-    <li><%= qcm.name %> (<%= qcm.subject %>) : <%= qcm.nbpoints %> points</li> <!-- Introduction Vanilla JS (Javascript): 20 points -->
-
-     <!-- afficher l'élément de la liste et le nb de points du Qcm-->
-    <% } %> <!-- penser à fermer le corps de la boucle -->
+    <% for (let qcm of qcms) { %>
+        <li>
+            <%= qcm.name %> (<%= qcm.subject %>) : <%= qcm.nbpoints %> points
+            <br>
+            <a href="/qcms/<%= qcm.id %>">Voir les questions</a>
+            <br>
+            <br>
+        </li>
+    <% } %>
 </ul>
+
+<a href="/qcms/new">Créer un nouveau QCM</a>
 
 <%- include('footer') -%>
